Usando AbstractRepositories. Até que ponto vale a pena.